Fix: Remove scrollbar

--- a/src/screens/MainScreen.module.css
+++ b/src/screens/MainScreen.module.css
@@ -14,6 +14,6 @@
 
 .map {
   background-color: #ccc;
-  width: 100%;
+  width: calc(100% - var(--sidebar-width));
   height: 100%;
 }
